crates/escalier_parser/src/snapshots/escalier_parser__stmt_parser__tests__parse_type_alias-2.snap
---
source: crates/escalier_parser/src/stmt_parser.rs
expression: "parse(r#\"type Point<T> = {x: T, y: T}\"#)"
---
[
    Stmt {
        kind: TypeDecl {
            name: "Point",
            type_ann: TypeAnn {
                kind: Object(
                    [
                        Prop(
                            Prop {
                                span: 0..0,
                                name: "x",
                                optional: false,
                                mutable: false,
                                type_ann: TypeAnn {
                                    kind: TypeRef(
                                        "T",
                                        None,
                                    ),
                                    span: 20..21,
                                    inferred_type: None,
                                },
                            },
                        ),
                        Prop(
                            Prop {
                                span: 0..0,
                                name: "y",
                                optional: false,
                                mutable: false,
                                type_ann: TypeAnn {
                                    kind: TypeRef(
                                        "T",
                                        None,
                                    ),
                                    span: 26..27,
                                    inferred_type: None,
                                },
                            },
                        ),
                    ],
                ),
                span: 15..28,
                inferred_type: None,
            },
            type_params: Some(
                [
                    TypeParam {
                        span: 12..13,
                        name: "T",
                        bound: None,
                        default: None,
                    },
                ],
            ),
        },
        span: 0..28,
        inferred_type: None,
    },
]
