crates/escalier_parser/src/snapshots/escalier_parser__stmt_parser__tests__parse_type_alias-4.snap
---
source: crates/escalier_parser/src/stmt_parser.rs
expression: "parse(r#\"type Event = {type: \"mousedown\", x: number, y: number} | {type: \"keydown\", key: string}\"#)"
---
[
    Stmt {
        kind: Decl(
            Decl {
                kind: TypeDecl(
                    TypeDecl {
                        name: "Event",
                        type_ann: TypeAnn {
                            kind: Union(
                                [
                                    TypeAnn {
                                        kind: Object(
                                            [
                                                Prop(
                                                    Prop {
                                                        span: 0..0,
                                                        name: "type",
                                                        modifier: None,
                                                        optional: false,
                                                        readonly: false,
                                                        type_ann: TypeAnn {
                                                            kind: StrLit(
                                                                "mousedown",
                                                            ),
                                                            span: 20..31,
                                                            inferred_type: None,
                                                        },
                                                    },
                                                ),
                                                Prop(
                                                    Prop {
                                                        span: 0..0,
                                                        name: "x",
                                                        modifier: None,
                                                        optional: false,
                                                        readonly: false,
                                                        type_ann: TypeAnn {
                                                            kind: Number,
                                                            span: 36..42,
                                                            inferred_type: None,
                                                        },
                                                    },
                                                ),
                                                Prop(
                                                    Prop {
                                                        span: 0..0,
                                                        name: "y",
                                                        modifier: None,
                                                        optional: false,
                                                        readonly: false,
                                                        type_ann: TypeAnn {
                                                            kind: Number,
                                                            span: 47..53,
                                                            inferred_type: None,
                                                        },
                                                    },
                                                ),
                                            ],
                                        ),
                                        span: 12..54,
                                        inferred_type: None,
                                    },
                                    TypeAnn {
                                        kind: Object(
                                            [
                                                Prop(
                                                    Prop {
                                                        span: 0..0,
                                                        name: "type",
                                                        modifier: None,
                                                        optional: false,
                                                        readonly: false,
                                                        type_ann: TypeAnn {
                                                            kind: StrLit(
                                                                "keydown",
                                                            ),
                                                            span: 64..73,
                                                            inferred_type: None,
                                                        },
                                                    },
                                                ),
                                                Prop(
                                                    Prop {
                                                        span: 0..0,
                                                        name: "key",
                                                        modifier: None,
                                                        optional: false,
                                                        readonly: false,
                                                        type_ann: TypeAnn {
                                                            kind: String,
                                                            span: 80..86,
                                                            inferred_type: None,
                                                        },
                                                    },
                                                ),
                                            ],
                                        ),
                                        span: 56..87,
                                        inferred_type: None,
                                    },
                                ],
                            ),
                            span: 12..87,
                            inferred_type: None,
                        },
                        type_params: None,
                    },
                ),
                span: 0..87,
            },
        ),
        span: 0..87,
        inferred_type: None,
    },
]
