crates/escalier_parser/src/snapshots/escalier_parser__stmt_parser__tests__parse_var_decls.snap
---
source: crates/escalier_parser/src/stmt_parser.rs
expression: "parse(r#\"let mut p = {x: 5, y: 10}\"#)"
---
[
    Stmt {
        kind: Decl(
            Decl {
                kind: VarDecl(
                    VarDecl {
                        is_declare: false,
                        is_var: false,
                        pattern: Pattern {
                            kind: Ident(
                                BindingIdent {
                                    name: "p",
                                    span: 4..7,
                                    mutable: true,
                                },
                            ),
                            span: 4..7,
                            inferred_type: None,
                        },
                        expr: Some(
                            Expr {
                                kind: Object(
                                    Object {
                                        properties: [
                                            Prop(
                                                Property {
                                                    key: Ident(
                                                        Ident {
                                                            name: "x",
                                                            span: 13..14,
                                                        },
                                                    ),
                                                    value: Expr {
                                                        kind: Num(
                                                            Num {
                                                                value: "5",
                                                            },
                                                        ),
                                                        span: 16..17,
                                                        inferred_type: None,
                                                    },
                                                },
                                            ),
                                            Prop(
                                                Property {
                                                    key: Ident(
                                                        Ident {
                                                            name: "y",
                                                            span: 19..20,
                                                        },
                                                    ),
                                                    value: Expr {
                                                        kind: Num(
                                                            Num {
                                                                value: "10",
                                                            },
                                                        ),
                                                        span: 22..24,
                                                        inferred_type: None,
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                span: 11..25,
                                inferred_type: None,
                            },
                        ),
                        type_ann: None,
                    },
                ),
                span: 0..25,
            },
        ),
        span: 0..25,
        inferred_type: None,
    },
]
